--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "express": "^4.13.4",
     "fs": "0.0.2",
     "http": "0.0.0",
-    "jade": "^1.11.0",
+    "morgan": "^1.7.0",
     "path": "^0.12.7",
+    "pug": "^2.0.0-beta2",
     "sqlite3": "^3.1.2"
   }
 }
