--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "http": "0.0.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
-    "pug": "^2.0.0-beta2",
-    "sqlite3": "^3.1.2"
+    "pug": "^2.0.0-beta2"
   }
 }
