--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "fs": "0.0.2",
-    "http": "0.0.0",
+    "https": "^1.0.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta2"
